src/styles/tables.css
/**
Basic Table Styles
 */
.emailSearch {
  margin-left: 60rem;
}

/* .faqText{
    text-align: start;
} */
.naturesEmailSearch {
  margin-left: 110rem;
}
.dropSelect fieldset {
  border: 0;
}

.dashBoardCard {
  height: min-content;
}

.cards {
  width: 40rem;
  height: min-content;
}
.box-shadow-dash .search-bar-dossier {
  margin-bottom: 30px;
}

/* .messagesTab{
  margin: -5rem 0rem 4rem 15rem;
} */

.sendButton {
  margin: 0px 25px 0px 25px;
}
/* Case management tab messages tab css */

.senderName {
  margin: -0.1rem 0rem 0rem 0rem;
  width: auto;
  white-space: nowrap;
  overflow: hidden !important;
  text-overflow: ellipsis;
}
.readMsgTime {
  margin: -0.3rem 0rem 0rem 3rem;
}
.reveiverName {
  margin-right: -142rem;
  width: 180px;
  white-space: nowrap;
  overflow: hidden !important;
  text-overflow: ellipsis;
}
.reveiveMsgTime {
  margin: -0.2rem 0rem 0rem 146rem;
}
.receiverAvatar {
  margin-right: 1rem;
}

/* client interface messages tab css */

.userName {
  width: 200px;
  white-space: nowrap;
  overflow: hidden !important;
  text-overflow: ellipsis;
}
.msgCounter {
  margin-left: -8rem;
  margin-top: 3rem;
}

.clientAvatar {
  margin: 0rem 28.4rem -3rem 20rem;
}

.clientName {
  margin: -2.4rem 0rem -2rem 7rem;
}

.msgTime {
  margin: -2.5rem 0rem 1rem 28rem;
}
.senderClient {
  margin: 0rem 0rem -2rem 94rem;
}
.senderTime {
  margin: -2rem 0rem 0rem 113rem;
}
.caseManagementTabs .MuiTabs-flexContainer.muiltr-heg063-MuiTabs-flexContainer {
  justify-content: center;
}
.table-responsive {
  display: block;
  width: 100%;
  height: 25rem;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.textWidthLimit {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  width: 30rem;
}

table.simple {
  width: 100%;
  border: none;
  border-spacing: 0;
  text-align: left;
}

table.simple thead tr th {
  padding: 16px 8px;
  font-weight: 500;
  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
  white-space: nowrap;
}

table.simple thead tr th:first-child {
  padding-left: 24px;
}

table.simple thead tr th:last-child {
  padding-right: 24px;
}

table.simple tbody tr td {
  padding: 12px 8px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
}

table.simple tbody tr td:first-child {
  padding-left: 24px;
}

table.simple tbody tr td:last-child {
  padding-right: 24px;
}

table.simple tbody tr:last-child td {
  border-bottom: none;
}

table.simple.clickable tbody tr {
  cursor: pointer;
}

table.simple.clickable tbody tr:hover {
  background: rgba(0, 0, 0, 0.03);
}

table.simple.borderless {
  border: none;
}

table.simple.borderless tbody tr td {
  border: none;
}

table.simple.borderless thead tr th {
  border: none;
}
.message-tab-header {
  flex-direction: inherit;
}
.message-searchbar {
  transform: inherit !important;
}
.selectedContactsMenu ul li {
  flex-direction: column;
}
.faq-search {
  width: 400px;
}
.autocomplete label {
  color: #ffffff !important;
}

.ant-picker-focused {
  border-color: #e90505;
  box-shadow: 0 0 0 2px rgb(21 21 21 / 20%);
  border-right-width: 1px;
  outline: 0;
}
.datepicker {
  background: initial;
  border-color: #b9b9b954;
  height: 5rem;
}

.ant-picker.ant-picker-large.datepicker {
  background-color: #202937;
  border-color: #b9b9b954;
}
.ant-picker-suffix .anticon svg {
  color: #fff;
}
.ant-picker-clear .anticon svg {
  color: #fff;
}
.ant-picker-input > input {
  color: #fff !important;
}
.ant-picker-clear {
  background-color: #202937 !important;
}
.MuiFormControl-root .ant-picker {
  border-color: rgba(255, 255, 255, 0.23);
}
.MuiFormControl-root .ant-picker:hover {
  border-color: rgba(255, 255, 255, 1);
}
.MuiFormControl-root .ant-picker input::placeholder {
  color: #fff;
  font-size: 14px;
  opacity: 1;
}

.MuiFormControl-root .ant-picker input:-ms-input-placeholder {
  color: #fff;
  font-size: 14px;
}

.MuiFormControl-root .ant-picker input::-ms-input-placeholder {
  color: #fff;
  font-size: 14px;
}

input#icon-button-file {
  color: #43daf1;
  margin: 0rem -22rem 0rem -5rem;
}
input[type="file"]::-webkit-file-upload-button {
  visibility: hidden;
}

.ck.ck-reset.ck-editor {
  border-radius: 2rem;
}
.ck.ck-reset.ck-editor {
  width: 100%;
}

.dossierLinkButton:hover {
  background-color: #0cb7e2;
  color: black;
}
.daycount {
  width: 45%;
}
.hourscount {
  width: 45%;
}
.daycount > div {
  background: #fff;
  border: 1px solid #c4c4c4;
}
.hourscount > div {
  background: #fff;
  border: 1px solid #c4c4c4;
}
.daycount > div:hover {
  background-color: #fff;
}
.hourscount > div:hover {
  background-color: #fff;
}
.etape-txt {
  width: 300px;
  display: inline-block;
  white-space: break-spaces;
}
.rowsPerPage p{
  margin: 0 !important;
}
.muiltr-ub5i9i-MuiInputBase-input-MuiOutlinedInput-input:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 100px #1f2836 inset;
}
.search-bar-msg{
  border-radius: 68px;
}
.msg-send-btn{
  top: 20px;
  right: 20px;
  
}
.time{
  right: 32px;
  bottom: 0px;
}
.msg-emoji-selction:hover{
  background-color: transparent;
}
.smily-icon:hover{
  opacity: 0.8;
}
.msg-main-section{
  height: calc(100vh - 355px);
}

@media screen and (max-width: 1700px) {
.dash-monavocat-tab{
  flex-direction: column;
}
.dash-monavocat-tab button {
	margin: 10px 0px !important;
}
}

@media screen and (max-width: 767px) {
  .caseManagementTabs
    .MuiTabs-flexContainer.muiltr-heg063-MuiTabs-flexContainer {
    justify-content: left;
  }
  .res-flex-direction {
    flex-direction: column;
  }
  .message-tab-header {
    flex-direction: column;
  }
  .senderClient {
    margin: 0rem 0rem -2rem 5rem;
  }
  .senderTime {
    margin: -2rem 0rem 0rem 28rem;
  }
  .faq-search {
    width: auto;
  }
  .faqcard1-txt {
    text-align: center;
  }
  .faqcard2-txt {
    text-align: center;
  }
  .daycount {
    width: 40%;
  }
  .hourscount {
    width: 40%;
  }
  .msg-main-section {
    height: calc(100vh - 435px);
  }
}

